--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -14,6 +14,7 @@ django = ">=5.1.7,<6.0.0"
 djangorestframework = ">=3.15.2,<4.0.0"
 django-cors-headers = ">=4.7.0,<5.0.0"
 psycopg2-binary = ">=2.9.10,<3.0.0"
+python-dotenv = "^1.0.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.5"
